Set container heights to prevent overflow with long list of entries

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,4 +2,5 @@
   border: 1px solid #333;
   box-shadow: 5px 5px 0 #aaa;
   padding: 1em;
+  max-height: 100%;
 }
