--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -8,6 +8,8 @@
 
 .entriesList {
   display: none;
+  max-height: 100%;
+  overflow: auto;
 }
 
 @media (min-width: 720px) {
